--- a/advice-generator-app-main/index.html
+++ b/advice-generator-app-main/index.html
@@ -25,8 +25,13 @@
 		<script defer src="main.js"></script>
 	</head>
 	<body>
+		<div class="language__container">
+			<span class="spanish">ES /</span>
+			<span class="english">EN</span>
+		</div>
 		<main>
 			<h1>Advice #<span class="id__advice">117</span></h1>
+
 			<p class="advice">
 				“It is easy to sit up and take notice, what's difficult is getting up and taking
 				action.”
