💬 remove / from language container

--- a/advice-generator-app-main/index.html
+++ b/advice-generator-app-main/index.html
@@ -26,8 +26,8 @@
 	</head>
 	<body>
 		<div class="language__container">
-			<span class="spanish">ES /</span>
-			<span class="english">EN</span>
+			<span class="spanish">es</span>
+			<span class="english active">en</span>
 		</div>
 		<main>
 			<h1>Advice #<span class="id__advice">117</span></h1>
