--- a/advice-generator-app-main/index.html
+++ b/advice-generator-app-main/index.html
@@ -25,7 +25,7 @@
 		<script defer src="main.js"></script>
 	</head>
 	<body>
-		<div class="language__container">
+		<div class="language__container" role="article">
 			<span class="spanish">es</span>
 			<span class="english active">en</span>
 		</div>
