--- a/advice-generator-app-main/index.html
+++ b/advice-generator-app-main/index.html
@@ -26,8 +26,8 @@
 	</head>
 	<body>
 		<div class="language__container" role="article">
-			<span class="spanish">es</span>
-			<span class="english active">en</span>
+			<span class="spanish" role="button">es</span>
+			<span class="english active" role="button">en</span>
 		</div>
 		<main>
 			<h1>Advice #<span class="id__advice">117</span></h1>
